cabal-version:      2.4
category:           Benchmarks
build-type:         Simple
name:               Lambda
synopsis:           Various implementations of lambda calculus
version:            0.1.0


executable pige-playground


  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/

  build-depends:
      base
    , Untyped
    , ansi-terminal
        ^>= 0.9.1
    , haskeline
        ^>= 0.7.5.0
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3
    , transformers
        ^>= 0.5.6.2



Library Untyped

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , containers
        ^>= 0.6.2.1
    , megaparsec
        ^>= 7.0.5
    , mtl
        ^>= 2.2.2
    , text
        ^>=1.2.3
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3

  exposed-modules:
      Untyped.Expression
      Untyped.PrettyPrint
      Untyped.Parser
      Untyped.Combinators
      Untyped.BulkCombinators
      Untyped.DeBruijn

  default-language:
    Haskell2010


Library SimplyTyped

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , containers
        ^>= 0.6.2.1
    , megaparsec
        ^>= 7.0.5
    , mtl
        ^>= 2.2.2
    , text
        ^>=1.2.3
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3

  exposed-modules:
      SimplyTyped.Expression
--      Untyped.PrettyPrint
      SimplyTyped.Parser
--      Untyped.Combinators
--      Untyped.BulkCombinators
--      Untyped.DeBruijn

  default-language:
    Haskell2010

test-suite untyped-tests

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/Untyped/

  build-depends:
      Untyped
    , base
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3

test-suite simply-typed-tests

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/SimplyTyped

  build-depends:
      SimplyTyped
    , base
    , megaparsec
        ^>= 7.0.5
    , text
        ^>=1.2.3
